[gd_scene load_steps=18 format=3 uid="uid://me5bp2qss0qj"]

[ext_resource type="Script" uid="uid://cuc45obhlvb6x" path="res://level_elements/level.gd" id="1_ynu1q"]
[ext_resource type="Script" uid="uid://84ijhsuwdyx5" path="res://level_elements/level_logic.gd" id="2_ufm7h"]
[ext_resource type="TileSet" uid="uid://56svi3hkvtjv" path="res://rendering/tiles/w1_tileset.tres" id="2_xwsq2"]
[ext_resource type="Texture2D" uid="uid://btuot74j1fbp4" path="res://editor/icons/player_spawnpoint.png" id="3_rk3yr"]
[ext_resource type="AudioStream" uid="uid://boradxidfn753" path="res://level_elements/keys/signflip_pickup.wav" id="4_un4ju"]
[ext_resource type="AudioStream" uid="uid://gfisy8ng12wn" path="res://level_elements/snd_camera.wav" id="5_b6b0w"]
[ext_resource type="AudioStream" uid="uid://cep2ftgrg225e" path="res://level_elements/undo.wav" id="6_tlvk4"]
[ext_resource type="Texture2D" uid="uid://bbwl23eeyrnd7" path="res://level_elements/autorun_off.png" id="7_2dj2b"]
[ext_resource type="Script" uid="uid://b5batb78w4h8y" path="res://level_elements/level_ui.gd" id="8_7sh3o"]
[ext_resource type="Texture2D" uid="uid://b5mtdgi8eorra" path="res://level_elements/autorun_on.png" id="8_n158d"]
[ext_resource type="AudioStream" uid="uid://lcqkdym8yi06" path="res://level_elements/goal/win.wav" id="8_rx13f"]
[ext_resource type="AudioStream" uid="uid://yukdfqp7sr3g" path="res://level_elements/autorun.wav" id="9_mj2a5"]
[ext_resource type="PackedScene" uid="uid://dh01y4njdul08" path="res://level_elements/hover_highlight.tscn" id="10_b7dph"]
[ext_resource type="PackedScene" uid="uid://wkjs6v6a35d" path="res://level_elements/ui/keypad/key_pad.tscn" id="10_hapwe"]
[ext_resource type="PackedScene" uid="uid://db8xfne3exmq5" path="res://rendering/mouseover_text.tscn" id="11_j0wdo"]
[ext_resource type="PackedScene" uid="uid://co2cgujysw6ei" path="res://level_elements/ui/warp_rod/warp_rod.tscn" id="11_pc6n5"]

[sub_resource type="ButtonGroup" id="ButtonGroup_gtwjn"]

[node name="Level" type="Node2D"]
process_priority = -10
script = ExtResource("1_ynu1q")

[node name="LevelLogic" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_ufm7h")

[node name="TileMap" type="TileMap" parent="."]
unique_name_in_owner = true
tile_set = ExtResource("2_xwsq2")
format = 2

[node name="Doors" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Keys" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Entries" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="SalvagePoints" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="PlayerSpawnPoint" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
texture = ExtResource("3_rk3yr")
centered = false
offset = Vector2(-13, -34)

[node name="KeyCounters" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="DebrisParent" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="IView1" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_un4ju")
bus = &"Sfx"

[node name="IView2" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_b6b0w")
bus = &"Sfx"

[node name="Undo" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_tlvk4")
volume_db = -4.437
pitch_scale = 0.6
bus = &"Sfx"

[node name="Win" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_rx13f")
bus = &"Sfx"

[node name="UI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
script = ExtResource("8_7sh3o")

[node name="AutorunOff" type="Sprite2D" parent="UI"]
unique_name_in_owner = true
visible = false
position = Vector2(4, 3)
texture = ExtResource("7_2dj2b")
centered = false

[node name="AutorunOn" type="Sprite2D" parent="UI"]
unique_name_in_owner = true
visible = false
position = Vector2(4, 3)
texture = ExtResource("8_n158d")
centered = false

[node name="DarkenBackground" type="ColorRect" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.478431)

[node name="KeyPad" parent="UI" instance=ExtResource("10_hapwe")]
visible = false

[node name="WarpRod" parent="UI" instance=ExtResource("11_pc6n5")]
visible = false
button_group = SubResource("ButtonGroup_gtwjn")

[node name="Autorun" type="AudioStreamPlayer" parent="UI"]
unique_name_in_owner = true
stream = ExtResource("9_mj2a5")
bus = &"Sfx"

[node name="HoverHighlight" parent="." instance=ExtResource("10_b7dph")]
unique_name_in_owner = true
color = Color(1, 1, 1, 0.74902)

[node name="PlayerParent" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="GoalParent" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Mouseover" parent="." instance=ExtResource("11_j0wdo")]
unique_name_in_owner = true
process_priority = 1
visible = false

[node name="LevelCamera" type="Camera2D" parent="."]
unique_name_in_owner = true
anchor_mode = 0
enabled = false
position_smoothing_enabled = true
position_smoothing_speed = 3.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
editor_draw_drag_margin = true
